[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", default-features = false }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
#stm32-metapac = {version = "14.0.0", features = ["stm32f411ce", "rt"]}

[dependencies.embassy-sync]
version = "0.3.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly"]

[dependencies.embassy-executor]
version = "0.3.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "defmt", "integrated-timers", "arch-cortex-m", "executor-thread"]

[dependencies.embassy-stm32]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "stm32f411ce", "time-driver-any", "exti", "unstable-pac"]

[dependencies.embassy-time]
version = "0.1.5"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "unstable-traits", "tick-hz-32_768"]


