[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gy91"]

[dependencies]
gy91 = { path = "gy91"}
libm = "0.2.8"
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ]}
anyhow = { version = "1.0.71", default-features = false }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[dependencies.embassy-sync]
version = "0.5.0"
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-executor]
version = "0.4.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "defmt", "integrated-timers", "arch-cortex-m", "executor-thread"]

[dependencies.embassy-stm32]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["stm32f411ce", "time-driver-any", "exti", "unstable-pac"]

[dependencies.embassy-time]
version = "0.2.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "tick-hz-32_768"]


